--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
 .primary-color{
     color: #179800;
 }
+
+.secondary{
+    color:rgba(239, 235, 227, 1);
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 10px;
+    /* background-color: #2196F3; */
+    padding: 10px;
+  }
+  
+  .grid-container > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+  }
+  
+  /* .item1 {
+    grid-row: 1 / 3;
+  } */
+
+  .checked {
+    color: orange;
+  }
+  
